# compression-experiments

./: .gitignore  Cargo.toml  README.md  record_perf.sh  rustfmt.toml
src/: Grimms.decompressed  Grimms.huffman  lib.rs  main.rs  new_bitvec.rs
test/: Grimms  Grimms.decompressed  Grimms.huffman
