[package]
name = "compression"
version = "0.1.0"
authors = ["Max Blachman <blachmanmax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.15.2"
phf = "0.8"
phf_codegen = "0.8"
smallbitvec = "2.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false